# offline-apt-devcontainer-feature

./: .gitignore  README.md  bundle.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
src/offline-apt/: NOTES.md  devcontainer-feature.json  install.sh
test/: test_oci_layout.py
test/offline-apt/: expected-jq-version  install_jq.sh  install_jq_exact_version.sh  install_jq_ripgrep.sh  scenarios.json  test.sh
tools/: build_scan_image.sh  run_failure_tests.sh  run_feature_tests.sh  validate_manifest.py
tools/offline_apt_feature/: __init__.py  cli.py  manifest.py  models.py  oci_layout.py  repo_index.py  resolver.py  scan.py
